--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,15 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+     <Button
+            android:textSize="30sp"
+            android:layout_gravity="center|top"
+            android:layout_marginTop="35dp"
+            android:text="NEXT ACTIVITY"
+            android:backgroundTint="@color/dark_gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
         <TextView
             android:id="@+id/text_view"
             android:layout_width="wrap_content"
