--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#000000</color>
+    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="orange">#FF9E0A</color>
-    <color name="light_grey">#A5A6A5</color>
-    <color name="dark_grey">#333333</color>
+    <color name="dark_gray">#333333</color>
+    <color name="orange">#ff9f09</color>
+    <color name="gray">#a5a5a5</color>
+    <color name="blue">#4486F1</color>
+    <color name="purple">#702DFF</color>
+    <color name="gray2">#3F3356</color>
+    <color name="blue2">#2F80ED</color>
+    <color name="green">#4CFF48</color>
+    <color name="red_orange">#AC4800</color>
+
 </resources>
