--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,36 @@
     android:background="@color/black"
     tools:context=".MainActivity">
 
-
     <FrameLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/container"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="0dp">
 
-
-     <Button
+        <Button
+            android:id="@+id/btn_next"
             android:textSize="30sp"
             android:layout_gravity="center|top"
             android:layout_marginTop="35dp"
+            android:visibility="gone"
             android:text="NEXT ACTIVITY"
             android:backgroundTint="@color/dark_gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        
+
+
         <TextView
             android:id="@+id/text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="28dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="0"
+            android:textSize="80sp"
             android:textColor="@color/white"
-            android:textSize="80sp" />
+            android:text="0"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </FrameLayout>
 
     <LinearLayout
@@ -52,35 +54,30 @@
             android:paddingVertical="6dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_clear"
-                style="@style/Light_Grey.Button"
                 android:onClick="onNumberClick"
-                android:text="@string/clear"
-                android:textSize="20sp" />
+                style="@style/Gray.button"
+                android:text="AC"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_plus_minus"
-                style="@style/Light_Grey.Button"
-                android:layout_marginHorizontal="16dp"
+                android:id="@+id/plus_and_minus"
+                android:layout_marginHorizontal="18dp"
+                style="@style/Gray.button"
+                android:text="+/-" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/procent"
+                style="@style/Gray.button"
                 android:onClick="onOperationClick"
-                android:text="@string/plus_minus"
-                android:textSize="20sp" />
+                android:text="%" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_percent"
-                style="@style/Light_Grey.Button"
+                android:id="@+id/delenie"
+                style="@style/Orange.button"
                 android:onClick="onOperationClick"
-                android:text="@string/percent" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_division"
-                style="@style/Orange.Button"
                 android:layout_marginStart="16dp"
-                android:onClick="onOperationClick"
-                android:text="@string/division" />
+                android:text="/" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,33 +86,29 @@
             android:paddingVertical="6dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_seven"
-                style="@style/Dark_Grey.Button"
                 android:onClick="onNumberClick"
-                android:text="@string/seven" />
+                style="@style/Dark.Gray.button"
+                android:text="7"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_eight"
-                style="@style/Dark_Grey.Button"
-                android:layout_marginHorizontal="16dp"
                 android:onClick="onNumberClick"
-                android:text="@string/eight" />
+                android:layout_marginHorizontal="18dp"
+                style="@style/Dark.Gray.button"
+                android:text="8" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_nine"
-                style="@style/Dark_Grey.Button"
                 android:onClick="onNumberClick"
-                android:text="@string/nine" />
+                style="@style/Dark.Gray.button"
+                android:text="9" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_multiplication"
-                style="@style/Orange.Button"
-                android:layout_marginStart="16dp"
+                android:id="@+id/umnozhit"
+                style="@style/Orange.button"
                 android:onClick="onOperationClick"
-                android:text="@string/multiplication" />
+                android:layout_marginStart="16dp"
+                android:text="x" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -124,33 +117,28 @@
             android:paddingVertical="6dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_four"
-                style="@style/Dark_Grey.Button"
+                style="@style/Dark.Gray.button"
                 android:onClick="onNumberClick"
-                android:text="@string/four" />
+                android:text="4"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_five"
-                style="@style/Dark_Grey.Button"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="18dp"
+                style="@style/Dark.Gray.button"
                 android:onClick="onNumberClick"
-                android:text="@string/five" />
+                android:text="5" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_six"
-                style="@style/Dark_Grey.Button"
+                style="@style/Dark.Gray.button"
                 android:onClick="onNumberClick"
-                android:text="@string/six" />
+                android:text="6" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_minus"
-                style="@style/Orange.Button"
-                android:layout_marginStart="16dp"
+                style="@style/Orange.button"
                 android:onClick="onOperationClick"
-                android:text="@string/minus" />
+                android:layout_marginStart="16dp"
+                android:text="-" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -159,33 +147,31 @@
             android:paddingVertical="6dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_one"
-                style="@style/Dark_Grey.Button"
                 android:onClick="onNumberClick"
-                android:text="@string/one" />
+                style="@style/Dark.Gray.button"
+                android:text="1"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_two"
-                style="@style/Dark_Grey.Button"
-                android:layout_marginHorizontal="16dp"
+                android:id="@+id/two"
                 android:onClick="onNumberClick"
-                android:text="@string/two" />
+                android:layout_marginHorizontal="18dp"
+                style="@style/Dark.Gray.button"
+                android:text="2" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_three"
-                style="@style/Dark_Grey.Button"
+                android:id="@+id/three"
                 android:onClick="onNumberClick"
-                android:text="@string/three" />
+                style="@style/Dark.Gray.button"
+                android:text="3" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_plus"
-                style="@style/Orange.Button"
-                android:layout_marginStart="16dp"
+                android:id="@+id/plus"
+                style="@style/Orange.button"
                 android:onClick="onOperationClick"
-                android:text="@string/plus" />
+                android:layout_marginStart="16dp"
+                android:text="+" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -194,31 +180,29 @@
             android:paddingVertical="6dp">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_zero"
-                style="@style/Dark_Grey.Button"
+                android:id="@+id/zero"
+                style="@style/Dark.Gray.button"
                 android:layout_width="176dp"
-                android:onClick="onNumberClick"
+                android:text="0"
+                android:textAlignment="textStart"
                 android:paddingStart="32dp"
-                android:text="@string/zero"
-                android:textAlignment="textStart" />
+                />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_dot"
-                style="@style/Dark_Grey.Button"
-                android:layout_marginHorizontal="16dp"
-                android:onClick="onNumberClick"
-                android:text="@string/dot" />
+                android:id="@+id/dot"
+                android:layout_marginHorizontal="18dp"
+                style="@style/Dark.Gray.button"
+                android:text="." />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_equality"
-                style="@style/Orange.Button"
+                android:id="@+id/ravno"
+                style="@style/Orange.button"
                 android:onClick="onOperationClick"
-                android:text="@string/equality" />
-
+                android:text="=" />
 
         </LinearLayout>
-
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
